img & icon links fix

--- a/contact.html
+++ b/contact.html
@@ -28,88 +28,89 @@
 
 <body>
     <!--HEADERRRRRRRR-->
-  <header class="sticky-top">
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
-      <div class="container-fluid">
-        <a class="navbar-brand text-dark" href="index.html"><span class="myiloglog">Grid-C</span></a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
-          aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-            <li class="nav-item">
-              <a class="nav-link active text-dark" aria-current="page" href="BIB.html" data-bs-toggle="tooltip"
-                data-placement="bottom" title="Bring Into Being">
-                <i class="bi bi-pen"></i> B.I.B.
-              </a>
-            </li>
-            <!--Novel Genre-->
-            <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle text-dark" data-bs-toggle="dropdown" href="#" role="button"
-                aria-expanded="false">
-                <i class="bi bi-book-half"></i> Novels
-              </a>
-              <ul class="dropdown-menu text-dark">
-                <li><a class="dropdown-item text-dark" href="#">Fantasy</a></li>
-                <li><a class="dropdown-item text-dark" href="#">Video Games</a></li>
-                <li><a class="dropdown-item text-dark" href="#">Kingdom Building</a></li>
-                <li><a class="dropdown-item text-dark" href="#">Slice of life</a></li>
-                <li><a class="dropdown-item text-dark" href="#">Sci-Fi</a></li>
-                <li><a class="dropdown-item text-dark" href="#">Sword & Magic</a></li>
-                <li>
-                  <hr class="dropdown-divider">
-                </li>
-                <li><a class="dropdown-item text-dark" href="#">More...</a></li>
-              </ul>
-            </li>
-            <!--Rankings-->
-            <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle text-dark" href="#oltime" role="button" data-bs-toggle="dropdown"
-                aria-expanded="false">
-                <i class="bi bi-reception-4"></i> Rankings
-              </a>
-              <ul class="dropdown-menu">
-                <li><a class="dropdown-item text-dark" href="#monthlyf">Monthly</a></li>
-                <li><a class="dropdown-item text-dark" href="#weeklyf">Weekly</a></li>
-                <li>
-                  <hr class="dropdown-divider text-dark">
-                </li>
-                <li><a class="dropdown-item text-dark" href="#">All-Time</a></li>
-              </ul>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="library.html">
-                <i class="bi bi-bookshelf"></i> Library
-              </a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link active text-dark" aria-current="page" href="#" data-bs-toggle="tooltip"
-                data-placement="bottom" title="Bring Into Being">
-                <i class="bi bi-sun-fill" id="toggleDark"></i>
-                <i class="bi bi-moon-stars-fill"></i>
-              </a>
-            </li>
-          </ul>
+    <header class="sticky-top">
+        <nav class="navbar navbar-expand-lg bg-body-tertiary">
+            <div class="container-fluid">
+                <a class="navbar-brand text-dark" href="index.html"><span class="myiloglog">Grid-C</span></a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                    aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                        <li class="nav-item">
+                            <a class="nav-link active text-dark" aria-current="page" href="BIB.html"
+                                data-bs-toggle="tooltip" data-placement="bottom" title="Bring Into Being">
+                                <i class="bi bi-pen"></i> B.I.B.
+                            </a>
+                        </li>
+                        <!--Novel Genre-->
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle text-dark" data-bs-toggle="dropdown" href="#"
+                                role="button" aria-expanded="false">
+                                <i class="bi bi-book-half"></i> Novels
+                            </a>
+                            <ul class="dropdown-menu text-dark">
+                                <li><a class="dropdown-item text-dark" href="#">Fantasy</a></li>
+                                <li><a class="dropdown-item text-dark" href="#">Video Games</a></li>
+                                <li><a class="dropdown-item text-dark" href="#">Kingdom Building</a></li>
+                                <li><a class="dropdown-item text-dark" href="#">Slice of life</a></li>
+                                <li><a class="dropdown-item text-dark" href="#">Sci-Fi</a></li>
+                                <li><a class="dropdown-item text-dark" href="#">Sword & Magic</a></li>
+                                <li>
+                                    <hr class="dropdown-divider">
+                                </li>
+                                <li><a class="dropdown-item text-dark" href="#">More...</a></li>
+                            </ul>
+                        </li>
+                        <!--Rankings-->
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle text-dark" href="#oltime" role="button"
+                                data-bs-toggle="dropdown" aria-expanded="false">
+                                <i class="bi bi-reception-4"></i> Rankings
+                            </a>
+                            <ul class="dropdown-menu">
+                                <li><a class="dropdown-item text-dark" href="#monthlyf">Monthly</a></li>
+                                <li><a class="dropdown-item text-dark" href="#weeklyf">Weekly</a></li>
+                                <li>
+                                    <hr class="dropdown-divider text-dark">
+                                </li>
+                                <li><a class="dropdown-item text-dark" href="#">All-Time</a></li>
+                            </ul>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="library.html">
+                                <i class="bi bi-bookshelf"></i> Library
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active text-dark" aria-current="page" href="#" data-bs-toggle="tooltip"
+                                data-placement="bottom" title="Bring Into Being">
+                                <i class="bi bi-sun-fill" id="toggleDark"></i>
+                                <i class="bi bi-moon-stars-fill"></i>
+                            </a>
+                        </li>
+                    </ul>
 
-          <!--Search Bar-->
-          <form class="d-flex px-2">
-            <input class="form-control me-sm-2" type="search" placeholder="Search">
-            <button class="btn btn-secondary my-2 my-sm-0" type="submit">Search</button>
-          </form>
-
-
-          <!-- Button trigger modal -->
-          <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
-            Log In
-          </button>
+                    <!--Search Bar-->
+                    <form class="d-flex px-2">
+                        <input class="form-control me-sm-2" type="search" placeholder="Search">
+                        <button class="btn btn-secondary my-2 my-sm-0" type="submit">Search</button>
+                    </form>
 
 
-        </div>
-      </div>
-    </nav>
-  </header>
-  <!--HEADER END-->
+                    <!-- Button trigger modal -->
+                    <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
+                        Log In
+                    </button>
+
+
+                </div>
+            </div>
+        </nav>
+    </header>
+    <!--HEADER END-->
 
 
     <div class="container my-5">
@@ -133,8 +134,8 @@
                 color: transparent
             }
 
-            .btn-info{
-              background-color: #3b71ca !important;
+            .btn-info {
+                background-color: #3b71ca !important;
             }
         </style>
 
@@ -156,13 +157,15 @@
                             <div class="col-md-6 mb-4">
 
                                 <!-- Name -->
-                                <input type="text" id="name" class="form-control" placeholder="Name" required>
+                                <input type="text" id="name" name="name" class="form-control" placeholder="Name"
+                                    required>
 
                             </div>
                             <div class="col-md-6 mb-4">
 
                                 <!-- Email -->
-                                <input type="email" id="email" class="form-control" placeholder="Email" required>
+                                <input type="email" id="email" name="email" class="form-control" placeholder="Email"
+                                    required>
 
                             </div>
                         </div>
@@ -171,7 +174,8 @@
                             <div class="col-md-12 mb-4">
 
                                 <!-- Subject -->
-                                <input type="text" id="subject" class="form-control" placeholder="Subject">
+                                <input type="text" id="subject" name="subject" class="form-control"
+                                    placeholder="Subject">
 
                             </div>
                         </div>
@@ -180,7 +184,7 @@
                             <div class="col-md-12">
 
                                 <div class="form-group mb-4">
-                                    <textarea class="form-control rounded" id="message" rows="3"
+                                    <textarea class="form-control rounded" id="message" name="message" rows="3"
                                         placeholder="Write your message here"></textarea>
                                 </div>
 
@@ -213,22 +217,22 @@
 
             <!-- Right -->
             <div>
-                <a href="" class="me-4 text-reset">
+                <a href="https://www.facebook.com/aadasalla/" class="me-4 text-reset" target="_blank">
                     <i class="fab fa-facebook-f"></i>
                 </a>
-                <a href="" class="me-4 text-reset">
+                <a href="https://twitter.com/" class="me-4 text-reset" target="_blank">
                     <i class="fab fa-twitter"></i>
                 </a>
-                <a href="" class="me-4 text-reset">
+                <a href="https://www.google.com/" class="me-4 text-reset" target="_blank">
                     <i class="fab fa-google"></i>
                 </a>
-                <a href="" class="me-4 text-reset">
+                <a href="https://en.wikipedia.org/wiki/Instagram" class="me-4 text-reset" target="_blank">
                     <i class="fab fa-instagram"></i>
                 </a>
-                <a href="" class="me-4 text-reset">
+                <a href="https://www.linkedin.com/" class="me-4 text-reset" target="_blank">
                     <i class="fab fa-linkedin"></i>
                 </a>
-                <a href="" class="me-4 text-reset">
+                <a href="https://github.com/maloya02?tab=repositories" class="me-4 text-reset" target="_blank">
                     <i class="fab fa-github"></i>
                 </a>
             </div>
