--- a/library.html
+++ b/library.html
@@ -113,8 +113,8 @@
 
     <div class="container mt-5 py-5">
       <hr>
-      <h1 id="monthlyf">Monthly Featured</h1>
-
+      <h1>Library</h1>
+      <hr>
       <div class="row p-5">
         <div class="col-4">
           <div class="card" style="width: 18rem;">
@@ -168,6 +168,7 @@
           </div>
         </div>
       </div>
+      <hr>
       <div class="row p-5">
         <div class="col-4">
           <div class="card" style="width: 18rem;">
@@ -217,6 +218,7 @@
           </div>
         </div>
       </div>
+      <hr>
       <div class="row p-5">
         <div class="col-4">
           <div class="card" style="width: 18rem;">
@@ -271,6 +273,7 @@
           </div>
         </div>
       </div>
+      <hr>
       <div class="row p-5">
         <div class="col-4">
           <div class="card" style="width: 18rem;">
@@ -343,25 +346,25 @@
 
       <!-- Right -->
       <div>
-        <a href="" class="me-4 text-reset">
-          <i class="fab fa-facebook-f"></i>
+        <a href="https://www.facebook.com/aadasalla/" class="me-4 text-reset" target="_blank">
+            <i class="fab fa-facebook-f"></i>
         </a>
-        <a href="" class="me-4 text-reset">
-          <i class="fab fa-twitter"></i>
+        <a href="https://twitter.com/" class="me-4 text-reset" target="_blank">
+            <i class="fab fa-twitter"></i>
         </a>
-        <a href="" class="me-4 text-reset">
-          <i class="fab fa-google"></i>
+        <a href="https://www.google.com/" class="me-4 text-reset" target="_blank">
+            <i class="fab fa-google"></i>
         </a>
-        <a href="" class="me-4 text-reset">
-          <i class="fab fa-instagram"></i>
+        <a href="https://en.wikipedia.org/wiki/Instagram" class="me-4 text-reset" target="_blank">
+            <i class="fab fa-instagram"></i>
         </a>
-        <a href="" class="me-4 text-reset">
-          <i class="fab fa-linkedin"></i>
+        <a href="https://www.linkedin.com/" class="me-4 text-reset" target="_blank">
+            <i class="fab fa-linkedin"></i>
         </a>
-        <a href="" class="me-4 text-reset">
-          <i class="fab fa-github"></i>
+        <a href="https://github.com/maloya02?tab=repositories" class="me-4 text-reset" target="_blank">
+            <i class="fab fa-github"></i>
         </a>
-      </div>
+    </div>
       <!-- Right -->
     </section>
     <!-- Section: Social media -->
