--- a/miniproject1/contact.html
+++ b/miniproject1/contact.html
@@ -156,13 +156,13 @@
                             <div class="col-md-6 mb-4">
 
                                 <!-- Name -->
-                                <input type="text" id="name" class="form-control" placeholder="Name" required>
+                                <input type="text" id="name" class="form-control" name="name" placeholder="Name" required>
 
                             </div>
                             <div class="col-md-6 mb-4">
 
                                 <!-- Email -->
-                                <input type="email" id="email" class="form-control" placeholder="Email" required>
+                                <input type="email" id="email" class="form-control" name="email" placeholder="Email" required>
 
                             </div>
                         </div>
@@ -171,7 +171,7 @@
                             <div class="col-md-12 mb-4">
 
                                 <!-- Subject -->
-                                <input type="text" id="subject" class="form-control" placeholder="Subject">
+                                <input type="text" id="subject" class="form-control" name="subject" placeholder="Subject">
 
                             </div>
                         </div>
@@ -180,7 +180,7 @@
                             <div class="col-md-12">
 
                                 <div class="form-group mb-4">
-                                    <textarea class="form-control rounded" id="message" rows="3"
+                                    <textarea class="form-control rounded" id="message" name="message" rows="3"
                                         placeholder="Write your message here"></textarea>
                                 </div>
 
@@ -213,22 +213,22 @@
 
             <!-- Right -->
             <div>
-                <a href="" class="me-4 text-reset">
+                <a href="https://www.facebook.com/aadasalla/" class="me-4 text-reset" target="_blank">
                     <i class="fab fa-facebook-f"></i>
                 </a>
-                <a href="" class="me-4 text-reset">
+                <a href="https://twitter.com/" class="me-4 text-reset" target="_blank">
                     <i class="fab fa-twitter"></i>
                 </a>
-                <a href="" class="me-4 text-reset">
+                <a href="https://www.google.com/" class="me-4 text-reset" target="_blank">
                     <i class="fab fa-google"></i>
                 </a>
-                <a href="" class="me-4 text-reset">
+                <a href="https://en.wikipedia.org/wiki/Instagram" class="me-4 text-reset" target="_blank">
                     <i class="fab fa-instagram"></i>
                 </a>
-                <a href="" class="me-4 text-reset">
+                <a href="https://www.linkedin.com/" class="me-4 text-reset" target="_blank">
                     <i class="fab fa-linkedin"></i>
                 </a>
-                <a href="" class="me-4 text-reset">
+                <a href="https://github.com/maloya02?tab=repositories" class="me-4 text-reset" target="_blank">
                     <i class="fab fa-github"></i>
                 </a>
             </div>
