--- a/index.html
+++ b/index.html
@@ -518,25 +518,25 @@
 
       <!-- Right -->
       <div>
-        <a href="" class="me-4 text-reset">
-          <i class="fab fa-facebook-f"></i>
+        <a href="https://www.facebook.com/aadasalla/" class="me-4 text-reset" target="_blank">
+            <i class="fab fa-facebook-f"></i>
         </a>
-        <a href="" class="me-4 text-reset">
-          <i class="fab fa-twitter"></i>
+        <a href="https://twitter.com/" class="me-4 text-reset" target="_blank">
+            <i class="fab fa-twitter"></i>
         </a>
-        <a href="" class="me-4 text-reset">
-          <i class="fab fa-google"></i>
+        <a href="https://www.google.com/" class="me-4 text-reset" target="_blank">
+            <i class="fab fa-google"></i>
         </a>
-        <a href="" class="me-4 text-reset">
-          <i class="fab fa-instagram"></i>
+        <a href="https://en.wikipedia.org/wiki/Instagram" class="me-4 text-reset" target="_blank">
+            <i class="fab fa-instagram"></i>
         </a>
-        <a href="" class="me-4 text-reset">
-          <i class="fab fa-linkedin"></i>
+        <a href="https://www.linkedin.com/" class="me-4 text-reset" target="_blank">
+            <i class="fab fa-linkedin"></i>
         </a>
-        <a href="" class="me-4 text-reset">
-          <i class="fab fa-github"></i>
+        <a href="https://github.com/maloya02?tab=repositories" class="me-4 text-reset" target="_blank">
+            <i class="fab fa-github"></i>
         </a>
-      </div>
+    </div>
       <!-- Right -->
     </section>
     <!-- Section: Social media -->
