--- a/miniproject1/BIB.html
+++ b/miniproject1/BIB.html
@@ -132,22 +132,22 @@
 
             <!-- Right -->
             <div>
-                <a href="" class="me-4 text-reset">
+                <a href="https://www.facebook.com/aadasalla/" class="me-4 text-reset" target="_blank">
                     <i class="fab fa-facebook-f"></i>
                 </a>
-                <a href="" class="me-4 text-reset">
+                <a href="https://twitter.com/" class="me-4 text-reset" target="_blank">
                     <i class="fab fa-twitter"></i>
                 </a>
-                <a href="" class="me-4 text-reset">
+                <a href="https://www.google.com/" class="me-4 text-reset" target="_blank">
                     <i class="fab fa-google"></i>
                 </a>
-                <a href="" class="me-4 text-reset">
+                <a href="https://en.wikipedia.org/wiki/Instagram" class="me-4 text-reset" target="_blank">
                     <i class="fab fa-instagram"></i>
                 </a>
-                <a href="" class="me-4 text-reset">
+                <a href="https://www.linkedin.com/" class="me-4 text-reset" target="_blank">
                     <i class="fab fa-linkedin"></i>
                 </a>
-                <a href="" class="me-4 text-reset">
+                <a href="https://github.com/maloya02?tab=repositories" class="me-4 text-reset" target="_blank">
                     <i class="fab fa-github"></i>
                 </a>
             </div>
