--- a/miniproject1/index.html
+++ b/miniproject1/index.html
@@ -144,10 +144,11 @@
         </div>
         <div class="carousel-item">
           <a href="https://www.webnovelpub.com/novel/trash-count-wn-14051348" target="_blank">
-            <img src="photos/TrashofTheCountsFam.jpg" class="d-block w-100" alt="2nd Novel Photo">
+            <img src="photos/totcfbg.jpg" class="d-block w-100" alt="2nd Novel Photo">
           </a>
           <div class="carousel-caption d-none d-md-block">
-
+            <h5>Trash of the count's family</h5>
+            <p>Video Games, Action, Adventure, System, Overpowered.</p>
           </div>
         </div>
         <div class="carousel-item">
