--- a/index.html
+++ b/index.html
@@ -144,10 +144,11 @@
         </div>
         <div class="carousel-item">
           <a href="https://www.webnovelpub.com/novel/trash-count-wn-14051348" target="_blank">
-            <img src="photos/TrashofTheCountsFam.jpg" class="d-block w-100" alt="2nd Novel Photo">
+            <img src="photos/totcfbg.jpg" class="d-block w-100" alt="2nd Novel Photo">
           </a>
           <div class="carousel-caption d-none d-md-block">
-
+            <h5>Trash of the Count's Famliy</h5>
+            <p>Video Games, Action, Adventure, System, Overpowered.</p>
           </div>
         </div>
         <div class="carousel-item">
@@ -184,7 +185,7 @@
 
     <div class="container mt-5 py-5">
       <hr>
-      <h1>Library</h1>
+      <h1 id="monthlyf">Monthly</h1>
       <hr>
       <div class="container-fluid">
         <div class="row gy-3 gx-3 p-2 justify-content-between">
