--- a/miniproject1/index.html
+++ b/miniproject1/index.html
@@ -185,7 +185,7 @@
 
     <div class="container mt-5 py-5">
       <hr>
-      <h1>Library</h1>
+      <h1 id="monthlyf">Monthly</h1>
       <hr>
       <div class="container-fluid">
         <div class="row gy-3 gx-3 p-2 justify-content-between">
